initial working mqttui with custom message

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ chrono = { version = "0.4", default-features = false, features = ["clock", "serd
 clap = { version = "4", features = ["deprecated", "derive", "env", "wrap_help"] }
 crossterm = "0.27"
 ego-tree = "0.9"
+prost = "0.13.3"
 rand = "0.8"
 ratatui = "0.26"
 ratatui-binary-data-widget = { git = "https://github.com/EdJoPaTo/ratatui-binary-data-widget", branch = "main" }
